# smol_bitmap

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  rustfmt.toml
.github/workflows/: ci.yml
benches/: basic_bench.rs  comparison.rs
examples/: advanced.rs  basic.rs  no_std.rs  set_ops.rs
src/: bitmap.rs  iter.rs  lib.rs  macros.rs  rkyv.rs  ser.rs  serde.rs  set_ops.rs  storage.rs  traits.rs
tests/: core.rs  integration_tests.rs  prop_range.rs  test_bitmap_macro.rs  test_resize_truncate.rs  test_word_ops.rs
